CHANGES IN VERSION 3.5.2
------------------------
 o bug fixed of maintaining input list order in plotting compareCluster result <2017-05-02, Tue>
   + https://support.bioconductor.org/p/95400/#95426

CHANGES IN VERSION 3.5.1
------------------------
 o bug fixed of converting KEGG PATH ID to NAME using KEGG.db <2017-04-28, Fri>
   + https://github.com/GuangchuangYu/clusterProfiler/issues/85

CHANGES IN VERSION 3.4.0
------------------------
 o BioC 3.5 release <2017-04-26, Wed>

CHANGES IN VERSION 3.3.6
------------------------
 o update kegg_species information <2017-03-26, Sun>
 o bug fixed of bitr_kegg for converting ID to kegg <2017-03-01, Wed>
   + https://support.bioconductor.org/p/93170/#93174
 o better support of plotGOgraph for gseGO, use core enriched gene info <2017-02-27, Mon>

CHANGES IN VERSION 3.3.5
------------------------
 o solve #81 <2017-02-12, Sun>
 o bitr_kegg support converting Path/Module to geneID and vice versa <2017-01-03, Tue>

CHANGES IN VERSION 3.3.4
------------------------
 o bug fixed of download_KEGG for supporting different keyType <2017-01-02, Mon>
 o split 3 GO sub-ontologies for enrichGO <2016-12-12, Mon>
 o dotplot for compareClusterResult to support 3 GO sub-ontologies <2016-12-8, Thu>
 o bug fixed of determine `ont` from `expand.dots` <2016-12-06, Mon>
   + see https://github.com/GuangchuangYu/clusterProfiler/issues/72

CHANGES IN VERSION 3.3.3
------------------------
 o switch from BiocStyle to prettydoc <2016-11-30, Wed>
 o change summary to as.data.frame in internal calls to prevent warning message <2016-11-14, Mon>

CHANGES IN VERSION 3.3.2
------------------------
 o define simplify generics as it was removed from IRanges <2016-11-11, Fri>

CHANGES IN VERSION 3.3.1
------------------------
 o update startup message <2016-11-09, Wed>
 o bug fixed in enrichDAVID <2016-11-06, Sun>
   + https://guangchuangyu.github.io/2015/10/use-simplify-to-remove-redundancy-of-enriched-go-terms/#comment-2987574851