@@ -5,7 +5,7 @@
 ##' @param geneList order ranked geneList
 ##' @param ont one of "BP", "MF", "CC" or "GO"
 ##' @param OrgDb OrgDb
-##' @param keytype keytype of gene
+##' @param keyType keytype of gene
 ##' @param exponent weight of each step
 ##' @param nPerm permutation numbers
 ##' @param minGSSize minimal size of each geneSet for analyzing
@@ -25,7 +25,7 @@
 gseGO <- function(geneList,
                   ont           = "BP", 
                   OrgDb,
-                  keytype       = "ENTREZID",
+                  keyType       = "ENTREZID",
                   exponent      = 1,
                   nPerm         = 1000,
                   minGSSize     = 10,
@@ -39,7 +39,7 @@ gseGO <- function(geneList,
     ont %<>% toupper
     ont <- match.arg(ont, c("BP", "CC", "MF", "ALL"))
     
-    GO_DATA <- get_GO_data(OrgDb, ont, keytype)
+    GO_DATA <- get_GO_data(OrgDb, ont, keyType)
 
     res <-  GSEA_internal(geneList = geneList,
                           exponent = exponent,
@@ -58,7 +58,7 @@ gseGO <- function(geneList,
     
     res@organism <- get_organism(OrgDb)
     res@setType <- ont
-    res@keytype <- keytype
+    res@keytype <- keyType
     
     if (ont == "ALL") {
         res <- add_GO_Ontology(res, GO_DATA)
